# ocaml-pulseaudio

./: .gitignore  .merlin  .travis.yml  CHANGES  CHANGES.md  Makefile.in  README  README.md  configure.ac  dune-project  index.html  pulseaudio.opam
.github/workflows/: ci.yml  doc.yml
examples/: Makefile  sine.ml
examples/noise/: Makefile  noise.ml
examples/rec/: Makefile  OCamlMakefile
examples/sine/: Makefile
pulseaudio/: index.html
pulseaudio/Pulseaudio/: index.html
pulseaudio/Pulseaudio/Simple/: index.html
src/: META.in  Makefile  Makefile.in  pulseaudio.ml  pulseaudio.mli  pulseaudio_stubs.c
