opam-version: "2.0"
name: "pulseaudio"
version: "0.1.3"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-pulseaudio"
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix]
  [make "clean"] {dev}
  [make]
]
install: [
  [make "install"]
]
depends: [
  "ocaml"
  "ocamlfind" {build}
]
depexts: [
  ["pulseaudio-dev"] {os-distribution = "alpine"}
  ["pulseaudio-libs-devel"] {os-distribution = "centos"}
  ["pulseaudio-libs-devel"] {os-distribution = "fedora"}
  ["pulseaudio-libs-devel"] {os-family = "suse"}
  ["pulseaudio"] {os = "macos" & os-distribution = "homebrew"}
  ["libpulse-dev"] {os-family = "debian"}
]
bug-reports: "https://github.com/savonet/ocaml-pulseaudio/issues"
dev-repo: "git+https://github.com/savonet/ocaml-pulseaudio.git"
synopsis: "Bindings to Pulseaudio client library"
